Data decoder service: Allow process sharing in SafeJsonParser.

This CL adds SafeJsonParser::ParseBatch which also takes in a |batch_id|
parameter. This allows clients to potentially use the same process for multiple
usages of data decoder service.

BUG=852058

Change-Id: If23f0cad2e819a6d3a2c0a136aab57284937f20c
Reviewed-on: https://chromium-review.googlesource.com/1105565
Commit-Queue: Karan Bhatia <karandeepb@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Jay Civelli <jcivelli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569048}
Former-commit-id: af014ee5332bcf11e0b83549084f9b5402c4f696