services/data_decoder/public/cpp/safe_json_parser.cc
@@ -5,6 +5,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "services/data_decoder/public/cpp/safe_json_parser.h"
 
+#include "base/optional.h"
 #include "build/build_config.h"
 
 #if defined(OS_ANDROID)
@@ -22,7 +23,8 @@ SafeJsonParser::Factory g_factory = nullptr;
 SafeJsonParser* Create(service_manager::Connector* connector,
                        const std::string& unsafe_json,
                        const SafeJsonParser::SuccessCallback& success_callback,
-                       const SafeJsonParser::ErrorCallback& error_callback) {
+                       const SafeJsonParser::ErrorCallback& error_callback,
+                       const base::Optional<std::string>& batch_id) {
   if (g_factory)
     return g_factory(unsafe_json, success_callback, error_callback);
 
@@ -31,7 +33,7 @@ SafeJsonParser* Create(service_manager::Connector* connector,
                                    error_callback);
 #else
   return new SafeJsonParserImpl(connector, unsafe_json, success_callback,
-                                error_callback);
+                                error_callback, batch_id);
 #endif
 }
 
@@ -47,8 +49,19 @@ void SafeJsonParser::Parse(service_manager::Connector* connector,
                            const std::string& unsafe_json,
                            const SuccessCallback& success_callback,
                            const ErrorCallback& error_callback) {
-  SafeJsonParser* parser =
-      Create(connector, unsafe_json, success_callback, error_callback);
+  SafeJsonParser* parser = Create(connector, unsafe_json, success_callback,
+                                  error_callback, base::nullopt);
+  parser->Start();
+}
+
+// static
+void SafeJsonParser::ParseBatch(service_manager::Connector* connector,
+                                const std::string& unsafe_json,
+                                const SuccessCallback& success_callback,
+                                const ErrorCallback& error_callback,
+                                const std::string& batch_id) {
+  SafeJsonParser* parser = Create(connector, unsafe_json, success_callback,
+                                  error_callback, batch_id);
   parser->Start();
 }
 
