services/data_decoder/public/cpp/safe_json_parser_impl.h
@@ -11,6 +11,7 @@
 #include "base/callback.h"
 #include "base/macros.h"
 #include "base/memory/ref_counted.h"
+#include "base/optional.h"
 #include "base/threading/thread_checker.h"
 #include "base/values.h"
 #include "services/data_decoder/public/cpp/safe_json_parser.h"
@@ -27,7 +28,8 @@ class SafeJsonParserImpl : public SafeJsonParser {
   SafeJsonParserImpl(service_manager::Connector* connector,
                      const std::string& unsafe_json,
                      const SuccessCallback& success_callback,
-                     const ErrorCallback& error_callback);
+                     const ErrorCallback& error_callback,
+                     const base::Optional<std::string>& batch_id);
 
  private:
   ~SafeJsonParserImpl() override;
